# CalcettoOS

./: CMakeLists.txt  README.md  arbitro.c  common.c  config  fato.c  giocatore.c  header.h  programManager.c  setup  squadra.c  team0  team1
docs/: project.md
